--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <h1 class="title">Hey</h1>
             <h1 class="title green">I'm Pious. </h1>
             <p class="header__para"> <b class="green"> Frontend Software Developer</b> | UI/UX Designer | Tech Enthusiast with a passion for crafting seamless digital experiences.
-             <br> Here's bit about me and <b class="green click" onclick="toggleModal()">my work</b>.    
+             <br> Here's bit about me and my <b><a href="./assets/Pious%20Godfearing%20I.T%20Software%20Resume%202026.pdf" class="green__resume click" target="_blank">resume</a></b>.    
             </p>
             <div class="social__list">
                 <a href="" class="social__link click"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="" class="social__link click"><i class="fa-brands fa-github"></i></a>
-                <a href="./assets/Pious%20Godfearing%20I.T%20Software%20Resume%202026.pdf" class="social__link click" target="_blank"> <i class="fa-regular fa-file-pdf"></i></a>
+                <a href="./assets/Pious%20Godfearing%20I.T%20Software%20Resume%202026.pdf" class="social__link click" download="Pious_Godfearing_Resume_2026.pdf"> <i class="fa-regular fa-file-pdf"></i></a>
             </div>
         </div>
       </header>
