--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             <div class="social__list">
                 <a href="" class="social__link click"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="" class="social__link click"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/PIOUSGODFEARING" class="social__link click"><i class="fa-brands fa-github"></i></a>
                 <a href="./assets/Pious%20Godfearing%20I.T%20Software%20Resume%202026.pdf" class="social__link click" download="Pious_Godfearing_Resume_2026.pdf"> <i class="fa-regular fa-file-pdf"></i></a>
             </div>
         </div>
