--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
              <br> Here's bit about me and my <b><a href="./assets/Pious%20Godfearing%20I.T%20Software%20Resume%202026.pdf" class="green__resume click" target="_blank">resume</a></b>.    
             </p>
             <div class="social__list">
-                <a href="https://www.linkedin.com/in/piousgodfearing" class="social__link click"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/pious-godfearing/" class="social__link click"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/PIOUSGODFEARING" class="social__link click" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="./assets/Pious%20Godfearing%20I.T%20Software%20Resume%202026.pdf" class="social__link click" download="Pious_Godfearing_Resume_2026.pdf"> <i class="fa-regular fa-file-pdf"></i></a>
             </div>
