--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
                 and <b class="green">visually refined</b> digital experiences.
                  <br><br>
                  I balance clean code with thoughtful design to <b class="green">prioritize usability</b>, <b class="green">performance</b>, and <b class="green">aesthetic
-                 precision</b> 
-                 that drive meaningful user engagement and <b class="green">business value</b>.
-                 Here are a few of my core technology stack:
+                 precision</b>. I currently learn from a team of professionals including <b class="green">David Bragg</b> my mentor who worked at 
+                 <b class="green">top tech</b> companies like <b class="green">Google</b> and <b class="green">Canva</b>. My core technology stack:
                 
             
             </p>
